--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -21,9 +21,11 @@ jobs:
       - name: Run Ruff for code formatting check
         uses: astral-sh/ruff-action@v3
         with:
+          version: 0.11.7
           args: "format --check --diff"
 
       - name: Run Ruff for linting check
         uses: astral-sh/ruff-action@v3
         with:
+          version: 0.11.7
           args: "check"
