--- a/configs/DINO-setup.yaml
+++ b/configs/DINO-setup.yaml
@@ -7,12 +7,11 @@ restart_files: 'restart'  # optional # density and all variables
 
 output_file_defaults: DINO_combined.nc  # if used in future
 
-# overrides defaults
 output_variables:
-  T: DINO_1y_grid_T.nc
-  T_sampled: DINO_1m_To_1y_grid_T.nc
-  u: DINO_1y_grid_U.nc
-  v: DINO_1y_grid_V.nc
-  w: DINO_1y_grid_W.nc
-
-# variable mapping here?
+  temperature: DINO_1y_grid_T.nc
+  salinity: DINO_1y_grid_T.nc
+  density: DINO_1y_grid_T.nc
+  ssh: DINO_1m_To_1y_grid_T.nc
+  velocity_zonal: DINO_1y_grid_U.nc
+  velocity_meridional: DINO_1y_grid_V.nc
+  velocity_vertical: DINO_1y_grid_W.nc
