--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,7 @@ Repository = "https://github.com/m2lines/Spinup-Evaluation"
 Issues = "https://github.com/m2lines/Spinup-Evaluation"
 
 [tool.setuptools]
-py-modules = ["metrics"]  
-package-dir = {"" = "src"}
+py-modules = ["spinup_eval"]  
 
 [tool.ruff]
 line-length = 88
