--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,13 +7,19 @@ build:
   tools:
     python: "3.12"
 
-# Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
-
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+  
 python:
   install:
-    - requirements: docs/requirements.txt
+    - method: pip
+      path: .  # This tells RTD to install your project via pyproject.toml
+# Build documentation in the "docs/" directory with Sphinx
+
+
+# # Optional but recommended, declare the Python requirements required
+# # to build your documentation
+# # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# python:
+#   install:
+#     - requirements: docs/requirements.txt
