--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-__pycache__
+**/.venv/
+*env
+
+# Egg files and distributions
+*.egg
+*.egg-info/
+build/
+dist
+
+# Bytecode and cache
+__pycache__/
+*.py[cod]
+*.pyo
+
+.vscode
