--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ Repository = "https://github.com/m2lines/Spinup-Evaluation"
 Issues = "https://github.com/m2lines/Spinup-Evaluation"
 
 [tool.setuptools]
-py-modules = ["metrics"]  
+py-modules = ["metrics"]
 package-dir = {"" = "src"}
 
 [tool.ruff]
@@ -46,7 +46,7 @@ extend-select = ["D417"]
 
 # Ignore SIM108 (use ternary instead of if-else) as I think it can obscure intent.
 # Ignore RUF002 (ambiguous characters) as it does not allow apostrophes in strings.
-ignore = ["SIM108", "RUF002"]
+ignore = ["SIM108", "RUF002", "PLR0913"]
 
 [tool.ruff.lint.pydocstyle]
 # Use NumPy convention for checking docstrings
