Move to explicit mapping of variables in config
This makes the loading logic more complex, but ultimately more flexible.
The following changes have been made:

* Explicitly name variables in config yaml
* Modify main.py interface for new config file
* Convert xarray.DataArray to xarray.Dataset
* Add header for ACC_Drake_metric_2
* Refactor src/loader.py for new config format
  * Introduce `_normalise_var_spec`, `_infer_var_name` and caching
  * Temporary donor hack that fixes resampled ssh time_counter (from ssh)
    * This fixes `NASTG_BSF_max`
    * TODO: General solution idea
  * Introduce idea of canonical name (Temperature, Salinity, Velocity_u)
  * `normalize_var_spec` returns mappings from canon to var and filename
    * If explict mapping is not provided, it is inferred
    * Add file cache so files are not repeatedly loaded
  * All metrics succeed and output files are generated

--- a/configs/DINO-setup.yaml
+++ b/configs/DINO-setup.yaml
@@ -1,18 +1,13 @@
 # DINO-setup.yaml
-# should hold true for all DINO runs.
 
 mesh_mask: mesh_mask.nc
 
-restart_files: 'restart'  # optional # density and all variables
+restart_files: 'restart'
 
-output_file_defaults: DINO_combined.nc  # if used in future
-
-# overrides defaults
 output_variables:
-  T: DINO_1y_grid_T.nc
-  T_sampled: DINO_1m_To_1y_grid_T.nc
-  u: DINO_1y_grid_U.nc
-  v: DINO_1y_grid_V.nc
-  w: DINO_1y_grid_W.nc
-
-# variable mapping here?
+  temperature: grid_T_3D.nc
+  salinity: grid_T_3D.nc
+  density: grid_T_3D.nc
+  ssh: grid_T_2D.nc
+  velocity_u: grid_U_3D.nc
+  velocity_v: grid_V_3D.nc
